--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.17.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
